tests/specs/graph/fast_check/test_test_test.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
// export function a() {
//   var x = "";
//   return {} as typeof x;
// };

export const a = (b: string, c = {} as typeof b) => {
};

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 144,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[unknown-var-type]: unknown type for variable in the public API
   --> /mod.ts:6:14
    |
  6 | export const a = (b: string, c = {} as typeof b): typeof b => {
    |              ^ this variable's type could not be inferred because its initializer
    |              - contains this arrow expression
    |                              - which has this parameter, which is missing an explicit type annotation
    |                                               - contains this reference to a local variable or type
    |
    = hint: add an explicit type annotation to the arrow expression parameter in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: local variables or types can not be referenced in the public API because they are not visible at the top level of the module
    docs: https://jsr.io/go/slow-type-unknown-var-type

